# connect4

./: Cargo.toml  Dockerfile
doc/: APIRoute.http
src/: evaluator.rs  lib.rs  main.rs  player.rs  server.rs
